2004-06-05 Vangelis Rokas <vrokas AT otenet.gr>

	* device/lib/pic16/startup/Makefile: added $(MODELFLAGS)
	in COMPILE_FLAGS. Thanks to G. Gallant for report.

2004-06-05 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: minor changes, mentioned beta vendor support
	for ds80c400
	* src/mcs51/peeph.def: ran unexpand -a over peeph.def
	* src/mcs51/peeph.def: removed obsolete peephole 100.a,
	added peephole 254 (left shift), 255 (jump table)

2004-06-04 Vangelis Rokas <vrokas AT otenet.gr>

	* device/lib/Makefile.in: removed comment line with model-pic16,
	* (target port-specific-objects-pic16): the libraries and objects
	are copied to the build directory form the device/lib/pic16/bin
	directory
	
	Cumulative patch concerning pic16 port:
	* library directory has been re-organized,
	* added support for PIC18F1220,
	* added headers and library sources for chips 18f1220,18f6520,
	18f6620,18f6680,18f6720,18f8520,18f8620,18f8680,18f8720

	* configuration registers setting has changed, now each supported
	device has a complete description of the registers it uses,
	* all initialisations are moved to idata sections, these section
	can be absolute or relocatable,
	* fixed initialisation of codespace variables,
	* fixed warning about PCLATU and gpsim,
	* src/pic16/gen.c (genCmp): now can handle partially iCodes with no ifx,
	* (genAssign): use table reads when assigning from variables in codespace,
	* src/pic16/glue.c (pic16emitStaticSeg): fixed to correctly initialise
	char/int variables placed in codespace,
	* (pic16_emitConfigRegs): NEW, emits a list with configuration
	registers set in .asm file, no need for --pomit-config-words anymore,
	* (pic16glue): some 8051 legacy segments are commented out
	(to be removed completely),
	* added support for alternative assembler and linker with --asm=
	and --link= command line arguments,
	* peepholes are disabled automatically in the port, no need to
	specify on command line,